--- a/packages/system_monitoring/sensor_system_monitoring_sensors.yaml
+++ b/packages/system_monitoring/sensor_system_monitoring_sensors.yaml
@@ -9,6 +9,6 @@ sensor:
       - type: processor_temperature
       - type: processor_use
       - type: throughput_network_in
-        arg: eth0
+        arg: end0
       - type: throughput_network_out
-        arg: eth0
+        arg: end0
