--- a/packages/intents/set_cover_position.yaml
+++ b/packages/intents/set_cover_position.yaml
@@ -7,4 +7,4 @@ intent_script:
       target:
         entity_id: "cover.living_room_cover"
     speech:
-      text: "D'accord"
+      text: "Position du volet réglée"
