--- a/packages/media_center/media_player_universal_media_center.yaml
+++ b/packages/media_center/media_player_universal_media_center.yaml
@@ -7,10 +7,16 @@ media_player:
       - media_player.tv_cast
       - media_player.philips_android_tv
       - media_player.kef
+    # active_child_template: |
+    #   {% if is_state_attr('media_player.tv_cast', 'app_name', 'Netflix') %}
+    #   media_player.philips_android_tv
+    #   {% elif not is_state('media_player.tv_cast', 'off') %}
+    #   media_player.tv_cast
+    #   {% else %}
+    #   media_player.philips_android_tv
+    #   {% endif %}
     active_child_template: |
-      {% if is_state_attr('media_player.tv_cast', 'app_name', 'Netflix') %}
-      media_player.philips_android_tv
-      {% elif not is_state('media_player.tv_cast', 'off') %}
+      {% if not is_state('media_player.tv_cast', 'off') %}
       media_player.tv_cast
       {% else %}
       media_player.philips_android_tv
