--- a/custom_sentences/fr/play_media_on_mass.yaml
+++ b/custom_sentences/fr/play_media_on_mass.yaml
@@ -4,6 +4,11 @@ intents:
     data:
       - sentences:
           - (Jouer|Joue|Écouter|Écoutez|Ecouter|Ecoutez) {query}
+  PlayWhateverOnArea:
+    data:
+      - sentences:
+          - (Jouer|Joue|Écouter|Écoutez|Ecouter|Ecoutez) {query} <dans> <area>
+          - (Jouer|Joue|Écouter|Écoutez|Ecouter|Ecoutez) {query} sur les enceintes <de> <area>
 
 lists:
   query:
