--- a/automations.yaml
+++ b/automations.yaml
@@ -1030,8 +1030,7 @@
       - switch.microphones
   mode: single
 - id: '1688371620889'
-  alias: "Surveillance de la maison - \U0001F514 Notifier appareils allumées et maison
-    vide"
+  alias: Surveillance de la maison - Éteindre appareils lors du départ
   description: ''
   trigger:
   - platform: state
@@ -1044,90 +1043,28 @@
     entity_id: input_boolean.automation_monitor_home
     state: 'on'
   action:
-  - if:
-    - condition: state
+  - service: light.turn_off
+    data: {}
+    target:
       entity_id: light.all_lights
-      state: 'on'
-    then:
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: "\U0001F4A1 Lumières allumées"
-        message: Des lumières sont allumées alors que personne n'est présent
-        callback:
-        - title: Éteindre les lumières
-          event: turn_off_lights
-          icon: lightbulb.fill
-        click_url: /lovelace/lights
-        tag: home_empty_lights_still_on
-        until:
-        - entity_id: binary_sensor.home_occupied
-          new_state: 'on'
-        - entity_id: light.all_lights
-          new_state: 'off'
-  - if:
-    - condition: state
-      entity_id: binary_sensor.is_tv_on
-      state: 'on'
-    then:
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: "\U0001F4FA TV allumée"
-        message: La TV est allumée alors que personne n'est présent
-        callback:
-        - title: Éteindre la TV
-          event: turn_off_tv
-          icon: tv.fill
-        click_url: /lovelace/connected-devices
-        tag: home_empty_tv_still_on
-        until:
-        - entity_id: binary_sensor.home_occupied
-          new_state: 'on'
-        - entity_id: binary_sensor.is_tv_on
-          new_state: 'off'
-  - if:
-    - condition: state
-      entity_id: media_player.kef
-      state: 'on'
-    then:
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: "\U0001F50A LSX allumées"
-        message: Les enceintes LSX sont allumées alors que personne n'est présent
-        callback:
-        - title: Éteindre les LSX
-          event: turn_off_lsx
-          icon: hifispeaker.fill
-        click_url: /lovelace/connected-devices
-        tag: home_empty_lsx_still_on
-        until:
-        - entity_id: binary_sensor.home_occupied
-          new_state: 'on'
-        - entity_id: media_player.kef
-          new_state: 'off'
-  - if:
-    - condition: state
+  - service: media_player.turn_off
+    data: {}
+    target:
+      entity_id:
+      - media_player.kef
+      - media_player.media_center
+      - media_player.music_assistant_bureau_sonos
+      - media_player.music_assistant_chambre_marilou_muse_luxe
+      - media_player.music_assistant_salon_kef
+  - service: switch.turn_off
+    data: {}
+    target:
+      entity_id:
+      - switch.microphones
+  - service: switch.turn_off
+    data: {}
+    target:
       entity_id: switch.coffeemaker
-      state: 'on'
-    then:
-    - event: NOTIFIER
-      event_data:
-        action: send_to_nearest
-        title: ️☕️ Machine a café allumé
-        message: La machine a café est allumée alors que personne n'est présent
-        callback:
-        - title: Éteindre la machine a café
-          event: turn_off_coffee_maker
-          icon: stop.circle.fill
-        click_url: /lovelace/connected-devices
-        tag: home_empty_cofee_maker_still_on
-        until:
-        - entity_id: binary_sensor.home_occupied
-          new_state: 'on'
-        - entity_id: switch.coffeemaker
-          new_state: 'off'
   - if:
     - condition: state
       entity_id: binary_sensor.all_doors
@@ -1174,7 +1111,7 @@
           new_state: 'off'
   mode: single
 - id: '1688373819985'
-  alias: Surveillance de la maison - Allumer assistants quand maison occupée
+  alias: Surveillance de la maison - Allumer appareils lors de l'arrivée
   description: ''
   trigger:
   - platform: state
@@ -1290,66 +1227,6 @@
           new_state: 'off'
         - entity_id: binary_sensor.all_windows
           new_state: 'off'
-  mode: single
-- id: '1688375484810'
-  alias: "Surveillance de la maison - \U0001F4F2 Éteindre lumières depuis notification"
-  description: ''
-  trigger:
-  - platform: event
-    event_type: mobile_app_notification_action
-    event_data:
-      action: turn_off_lights
-  condition: []
-  action:
-  - service: light.turn_off
-    data: {}
-    target:
-      entity_id: light.all_lights
-  mode: single
-- id: '1688375570728'
-  alias: "Surveillance de la maison - \U0001F4F2 Éteindre TV depuis notification"
-  description: ''
-  trigger:
-  - platform: event
-    event_type: mobile_app_notification_action
-    event_data:
-      action: turn_off_tv
-  condition: []
-  action:
-  - service: remote.turn_off
-    data: {}
-    target:
-      entity_id: remote.jl_s_tv
-  mode: single
-- id: '1688375617351'
-  alias: "Surveillance de la maison - \U0001F4F2 Éteindre KEF depuis notification"
-  description: ''
-  trigger:
-  - platform: event
-    event_type: mobile_app_notification_action
-    event_data:
-      action: turn_off_lsx
-  condition: []
-  action:
-  - service: media_player.turn_off
-    data: {}
-    target:
-      entity_id: media_player.kef
-  mode: single
-- id: '1688375659718'
-  alias: "Surveillance de la maison - \U0001F4F2 Éteindre machine à café depuis notification"
-  description: ''
-  trigger:
-  - platform: event
-    event_type: mobile_app_notification_action
-    event_data:
-      action: turn_off_coffee_maker
-  condition: []
-  action:
-  - service: switch.turn_off
-    data: {}
-    target:
-      entity_id: switch.coffeemaker
   mode: single
 - id: '1688386134462'
   alias: "Surveillance du système - \U0001F514 Notifier mise a jour dispo"
